--- a/content/resources/15-810s15-th.md
+++ b/content/resources/15-810s15-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A display of Swatch watches in a shop window.
-file: /media/courses/15-810-marketing-management-analytics-frameworks-and-applications-fall-2015/bab8d879420a98917f2f7de6f26b4790_15.810s15-th.jpg
+file: /courses/15-810-marketing-management-analytics-frameworks-and-applications-fall-2015/bab8d879420a98917f2f7de6f26b4790_15.810s15-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "A display of Swatch watches in a shop window.\_The success of the Swatch\
@@ -11,8 +11,10 @@ image_metadata:
   credit: Photo courtesy of Rob Deutscher on Flickr. https://www.flickr.com/photos/bobarc/6821065429/
   image-alt: A marketing display of Swatch watches in a store window.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15.810f15-th.jpg
 uid: bab8d879-420a-9891-7f2f-7de6f26b4790
 ---
+A display of Swatch watches in a shop window.
