--- a/content/resources/15-810s15-th.md
+++ b/content/resources/15-810s15-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A display of Swatch watches in a shop window.
 file: /courses/15-810-marketing-management-analytics-frameworks-and-applications-fall-2015/bab8d879420a98917f2f7de6f26b4790_15.810s15-th.jpg
+file_size: 35848
 file_type: image/jpeg
 image_metadata:
   caption: "A display of Swatch watches in a shop window.\_The success of the Swatch\
