--- a/content/resources/15-810s15.md
+++ b/content/resources/15-810s15.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A display of Swatch watches in a shop window.
 file: /courses/15-810-marketing-management-analytics-frameworks-and-applications-fall-2015/04213e06e2f27145757c55a1e9eaac76_15.810s15.jpg
+file_size: 165757
 file_type: image/jpeg
 image_metadata:
   caption: "A display of Swatch watches in a shop window.\_The success of the Swatch\
