--- a/content/resources/15-810s15.md
+++ b/content/resources/15-810s15.md
@@ -7,8 +7,8 @@ file_type: image/jpeg
 image_metadata:
   caption: "A display of Swatch watches in a shop window.\_The success of the Swatch\
     \ watch was driven by innovative marketing strategies, which transformed the industry.\
-    \ (Photo courtesy of [Rob Deutscher](http://www.flickr.com/photos/bobarc/6821065429/)\
-    \ on Flickr.)"
+    \ (Photo courtesy of {{% resource_link \"2ca6eb4d-fc4e-4e87-ac3a-44e88e9c4460\"\
+    \ \"Rob Deutscher\" %}} on Flickr.)"
   credit: Photo courtesy of Rob Deutscher on Flickr. https://www.flickr.com/photos/bobarc/6821065429/
   image-alt: A marketing display of Swatch watches in a store window.
 learning_resource_types: []
